<resources>
    <string name="app_name">Телега</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="def_full_name">Vovan S</string>
    <string name="def_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="def_phone_number">+7(982)156-89-05</string>
    <string name="settings_label_phone_number">Нажмите чтобы изменить телефон</string>
    <string name="def_username">vovan_s</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_def_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="change_name">Изменить имя</string>
    <string name="exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="enter_code">Введите код</string>
    <string name="register_text_we_send">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_def_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_enter_phone_number">Введите номер телефона</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="settings_toast_name_isempty">Имя не может быть пустым</string>
    <string name="data_updated">Данные обновлены</string>
    <string name="change_photo">Выбрать фотографию</string>
    <string name="settings_your_username">Ваше имя пользователя</string>
    <string name="username_is_busy">Это имя занято. Выберите другое!</string>
    <string name="message">Сообщение</string>
    <string name="def_message_text">Привет я Вова</string>
    <string name="def_message_time">09:37</string>
    <string name="last_message_text">Текст последнего сообщения</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="create_group">Создание группы</string>
</resources>